# dacon_llm

./: [Baseline]_gemma-ko-7b 기반 금융보안 텍스트 생성 AI 모델.ipynb  main.py  pyproject.toml  read_v3_data.ipynb
v3_code/: hybrid_search_qdrant.py  init_qdrant.py
v3_code/data/: law_v3_original_sentences.joblib
v4/: v4_preprocessed.jsonl
