[project]
name = "dacon-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]
